services/bookstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bookstack
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bookstack
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: bookstack
          image: lscr.io/linuxserver/bookstack
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /status
              port: http
            periodSeconds: 10
            failureThreshold: 90
          readinessProbe:
            httpGet:
              path: /status
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /status
              port: http
            periodSeconds: 30
            failureThreshold: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bookstack-data
