services/bookstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
spec:
  selector:
    app.kubernetes.io/name: bookstack
  ports:
    - port: 80
      targetPort: http
