services/bookstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
spec:
  ingressClassName: public
  tls:
    - hosts:
        - docs.login.no
  rules:
    - host: docs.login.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack
                port:
                  number: 80
